Generate new fikalist

--- a/fikalist.ipynb
+++ b/fikalist.ipynb
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T09:47:54.297022Z",
-     "start_time": "2019-01-21T09:47:54.129774Z"
+     "end_time": "2019-04-08T18:06:12.380986Z",
+     "start_time": "2019-04-08T18:06:12.112992Z"
     }
    },
    "outputs": [],
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T09:47:55.370560Z",
-     "start_time": "2019-01-21T09:47:55.338539Z"
+     "end_time": "2019-04-08T18:09:52.288468Z",
+     "start_time": "2019-04-08T18:09:52.280848Z"
     }
    },
    "outputs": [
@@ -57,33 +57,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filip\n",
-      "Francesca\n",
-      "Rupal\n",
-      "Mark\n",
-      "Navpreet\n",
-      "David\n",
-      "Bengt\n",
-      "Felix\n",
-      "Jonas\n",
-      "Linda\n",
-      "Björn\n",
-      "Christian\n",
-      "Moszi\n",
-      "Josefin\n",
-      "Thedi\n",
       "Dennis\n",
+      "Francesca\n",
+      "Giulia\n",
+      "Björn\n",
       "Nirmal\n",
       "Rakhee\n",
       "Zeynep\n",
+      "Navpreet\n",
+      "Mark\n",
+      "Linda\n",
+      "Filip\n",
+      "Rupal\n",
+      "Jonas\n",
       "Christer\n",
-      "Exjobbare\n"
+      "Thedi\n",
+      "Vlasta\n",
+      "Bengt\n",
+      "Christian\n",
+      "Josefin\n",
+      "Felix\n",
+      "Exjobbare\n",
+      "Moszi\n"
      ]
     }
    ],
    "source": [
     "# input data\n",
-    "filename = 'old_fikalists/autumn18_edits.fika'\n",
+    "filename = 'old_fikalists/winter19_edits.fika'\n",
     "fikalist = FikaList()\n",
     "fikalist.input_list(filename)\n",
     "\n",
@@ -102,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T09:47:56.686911Z",
-     "start_time": "2019-01-21T09:47:56.682419Z"
+     "end_time": "2019-04-08T18:09:53.072721Z",
+     "start_time": "2019-04-08T18:09:53.069015Z"
     }
    },
    "outputs": [
@@ -114,21 +115,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Farewell, David!\n",
-      "Welcome, Giulia!\n",
-      "Welcome, Vlasta!\n",
       "Alex is not in the list of providers...\n"
      ]
     }
    ],
    "source": [
     "# update by adding and removing people, use lists if you like.\n",
-    "fikalist.providers.remove(['David'])\n",
-    "fikalist.providers.add('Giulia')\n",
-    "fikalist.providers.add('Vlasta')\n",
+    "# I think everyone is the same right now...\n",
+    "#fikalist.providers.add('Giulia')\n",
     "\n",
     "# FikaList even handles your errors\n",
-    "fikalist.providers.remove('Alex')"
+    "fikalist.providers.remove('Bjorn')"
    ]
   },
   {
@@ -144,18 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T09:47:58.685520Z",
-     "start_time": "2019-01-21T09:47:58.682268Z"
+     "end_time": "2019-04-08T18:09:53.971471Z",
+     "start_time": "2019-04-08T18:09:53.968462Z"
     }
    },
    "outputs": [],
    "source": [
-    "# Bump up Giulia and Vlasta as they just returned\n",
-    "fikalist.constraints.add('Giulia', 'just arrived')\n",
-    "fikalist.constraints.add('Vlasta', 'just arrived')\n",
+    "# Example of how to bump up someone who has just arrived\n",
+    "#fikalist.constraints.add('Giulia', 'just arrived')\n",
     "\n",
     "# Rakhee and Nirmal live together, so they should have the same fika date\n",
     "fikalist.constraints.add(['Rakhee', 'Nirmal'], 'together')"
@@ -174,11 +170,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T09:48:02.794717Z",
-     "start_time": "2019-01-21T09:48:02.666835Z"
+     "end_time": "2019-04-08T18:09:54.803575Z",
+     "start_time": "2019-04-08T18:09:54.800737Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from datetime import date, timedelta\n",
+    "\n",
+    "# specify the desired start date \n",
+    "start_date = date(2019, 4, 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-08T18:09:55.571949Z",
+     "start_time": "2019-04-08T18:09:55.449688Z"
     }
    },
    "outputs": [
@@ -212,87 +225,80 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>4</td>\n",
-       "      <td>25/01/2019</td>\n",
-       "      <td>Dennis</td>\n",
-       "      <td>Francesca</td>\n",
+       "      <td>17</td>\n",
+       "      <td>26/04/2019</td>\n",
+       "      <td>Zeynep</td>\n",
+       "      <td>Björn</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>01/02/2019</td>\n",
-       "      <td>Giulia</td>\n",
-       "      <td>Vlasta</td>\n",
+       "      <td>18</td>\n",
+       "      <td>03/05/2019</td>\n",
+       "      <td>Navpreet</td>\n",
+       "      <td>Dennis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6</td>\n",
-       "      <td>08/02/2019</td>\n",
+       "      <td>19</td>\n",
+       "      <td>10/05/2019</td>\n",
        "      <td>Nirmal</td>\n",
        "      <td>Rakhee</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7</td>\n",
-       "      <td>15/02/2019</td>\n",
-       "      <td>Felix</td>\n",
-       "      <td>Navpreet</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17/05/2019</td>\n",
+       "      <td>Jonas</td>\n",
+       "      <td>Mark</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>8</td>\n",
-       "      <td>22/02/2019</td>\n",
-       "      <td>Mark</td>\n",
+       "      <td>21</td>\n",
+       "      <td>24/05/2019</td>\n",
+       "      <td>Francesca</td>\n",
        "      <td>Linda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>9</td>\n",
-       "      <td>01/03/2019</td>\n",
-       "      <td>Filip</td>\n",
+       "      <td>24</td>\n",
+       "      <td>14/06/2019</td>\n",
        "      <td>Rupal</td>\n",
+       "      <td>Felix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>10</td>\n",
-       "      <td>08/03/2019</td>\n",
-       "      <td>Jonas</td>\n",
-       "      <td>Christer</td>\n",
+       "      <td>36</td>\n",
+       "      <td>06/09/2019</td>\n",
+       "      <td>Thedi</td>\n",
+       "      <td>Giulia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>11</td>\n",
-       "      <td>15/03/2019</td>\n",
-       "      <td>Thedi</td>\n",
-       "      <td>Björn</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>12</td>\n",
-       "      <td>22/03/2019</td>\n",
-       "      <td>Bengt</td>\n",
+       "      <td>37</td>\n",
+       "      <td>13/09/2019</td>\n",
+       "      <td>Filip</td>\n",
        "      <td>Christian</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>38</td>\n",
+       "      <td>20/09/2019</td>\n",
+       "      <td>Christer</td>\n",
+       "      <td>Vlasta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>13</td>\n",
-       "      <td>29/03/2019</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>Moszi</td>\n",
+       "      <td>39</td>\n",
+       "      <td>27/09/2019</td>\n",
+       "      <td>Josefin</td>\n",
+       "      <td>Exjobbare</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>14</td>\n",
-       "      <td>05/04/2019</td>\n",
-       "      <td>Josefin</td>\n",
-       "      <td>Zeynep</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>15</td>\n",
-       "      <td>12/04/2019</td>\n",
-       "      <td>Exjobbare</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>40</td>\n",
+       "      <td>04/10/2019</td>\n",
+       "      <td>Moszi</td>\n",
+       "      <td>Bengt</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -300,18 +306,17 @@
       ],
       "text/plain": [
        "   Week      Friday   Person 1   Person 2\n",
-       "0     4  25/01/2019     Dennis  Francesca\n",
-       "1     5  01/02/2019     Giulia     Vlasta\n",
-       "2     6  08/02/2019     Nirmal     Rakhee\n",
-       "3     7  15/02/2019      Felix   Navpreet\n",
-       "4     8  22/02/2019       Mark      Linda\n",
-       "5     9  01/03/2019      Filip      Rupal\n",
-       "6    10  08/03/2019      Jonas   Christer\n",
-       "7    11  15/03/2019      Thedi      Björn\n",
-       "8    12  22/03/2019      Bengt  Christian\n",
-       "9    13  29/03/2019        nan      Moszi\n",
-       "10   14  05/04/2019    Josefin     Zeynep\n",
-       "11   15  12/04/2019  Exjobbare        nan"
+       "0    17  26/04/2019     Zeynep      Björn\n",
+       "1    18  03/05/2019   Navpreet     Dennis\n",
+       "2    19  10/05/2019     Nirmal     Rakhee\n",
+       "3    20  17/05/2019      Jonas       Mark\n",
+       "4    21  24/05/2019  Francesca      Linda\n",
+       "5    24  14/06/2019      Rupal      Felix\n",
+       "6    36  06/09/2019      Thedi     Giulia\n",
+       "7    37  13/09/2019      Filip  Christian\n",
+       "8    38  20/09/2019   Christer     Vlasta\n",
+       "9    39  27/09/2019    Josefin  Exjobbare\n",
+       "10   40  04/10/2019      Moszi      Bengt"
       ]
      },
      "metadata": {},
@@ -320,7 +325,7 @@
    ],
    "source": [
     "# NB: only run this block once without reinitialising\n",
-    "fikalist.generate()\n",
+    "fikalist.generate(start_date=start_date)\n",
     "\n",
     "# show the generated list\n",
     "fikalist.show()\n",
@@ -342,16 +347,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T09:48:14.667817Z",
-     "start_time": "2019-01-21T09:48:14.660302Z"
+     "end_time": "2019-04-08T18:13:25.623832Z",
+     "start_time": "2019-04-08T18:13:25.617260Z"
     }
    },
    "outputs": [],
    "source": [
-    "output_filename = 'old_fikalists/winter19.fika'\n",
+    "output_filename = 'old_fikalists/spring19.fika'\n",
     "fikalist.save(output_filename)"
    ]
   }
