New fikalist for 2020

--- a/fikalist.ipynb
+++ b/fikalist.ipynb
@@ -15,8 +15,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:31:18.794591Z",
-     "start_time": "2019-09-29T18:31:18.389346Z"
+     "end_time": "2020-01-21T12:40:13.158463Z",
+     "start_time": "2020-01-21T12:40:12.321360Z"
     }
    },
    "outputs": [],
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:43:06.313149Z",
-     "start_time": "2019-09-29T18:43:06.301170Z"
+     "end_time": "2020-01-21T12:47:57.973169Z",
+     "start_time": "2020-01-21T12:47:57.964495Z"
     }
    },
    "outputs": [
@@ -58,33 +58,35 @@
      "output_type": "stream",
      "text": [
       "Dennis\n",
+      "Filip\n",
       "Francesca\n",
-      "Giulia\n",
       "Björn\n",
+      "Vlasta\n",
+      "Giulia\n",
+      "Marcus\n",
+      "Fredrik\n",
       "Nirmal\n",
       "Rakhee\n",
-      "Zeynep\n",
-      "Navpreet\n",
-      "Mark\n",
-      "Linda\n",
-      "Filip\n",
-      "Rupal\n",
-      "Jonas\n",
-      "Christer\n",
-      "Thedi\n",
-      "Vlasta\n",
-      "Bengt\n",
-      "Christian\n",
       "Josefin\n",
+      "Mattias\n",
+      "Zeynep\n",
       "Felix\n",
-      "Exjobbare\n",
-      "Moszi\n"
+      "Navpreet\n",
+      "Rabia\n",
+      "Bengt\n",
+      "Mark\n",
+      "Manojit\n",
+      "Jonas\n",
+      "Thedi\n",
+      "Moszi\n",
+      "Christian\n",
+      "Exjobbare\n"
      ]
     }
    ],
    "source": [
     "# input data\n",
-    "filename = 'old_fikalists/winter19_edits.fika'\n",
+    "filename = 'old_fikalists/autumn19_edits.fika'\n",
     "fikalist = FikaList()\n",
     "fikalist.input_list(filename)\n",
     "\n",
@@ -103,11 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:43:07.062790Z",
-     "start_time": "2019-09-29T18:43:07.053502Z"
+     "end_time": "2020-01-21T12:48:00.464958Z",
+     "start_time": "2020-01-21T12:48:00.459176Z"
     }
    },
    "outputs": [
@@ -115,28 +117,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome, Rabia!\n",
-      "Welcome, Fredrik!\n",
-      "Welcome, Mattias!\n",
-      "Welcome, Marcus!\n",
-      "Welcome, Manojit!\n",
-      "Farewell, Christer!\n",
-      "Farewell, Linda!\n",
-      "Farewell, Rupal!\n",
-      "Farewell, Francesca!\n",
+      "Welcome, David!\n",
+      "Welcome, Olle!\n",
+      "Welcome, Tommy!\n",
+      "Welcome, Sandhya!\n",
+      "Welcome, Christer!\n",
+      "Farewell, Zeynep!\n",
       "Farewell, Björn!\n",
+      "Farewell, Thedi!\n",
+      "Farewell, Moszi!\n",
       "Linda is not in the list of providers...\n"
      ]
     }
    ],
    "source": [
     "# update by adding and removing people, use lists if you like.\n",
-    "fikalist.providers.add(['Rabia', 'Fredrik']) # new PhD student/Engineer!\n",
-    "fikalist.providers.add(['Mattias', 'Marcus', 'Manojit']) # Theory people!\n",
-    "fikalist.providers.remove(['Christer', 'Linda', 'Rupal'])\n",
+    "fikalist.providers.add(['David', 'Olle']) # new Postdocs!\n",
+    "fikalist.providers.add(['Tommy', 'Sandhya']) # Theory people!\n",
+    "fikalist.providers.add(['Christer'])\n",
+    "fikalist.providers.remove(['Zeynep', 'Björn'])\n",
     "\n",
-    "# Remove myself and Bjorn as we will do next week\n",
-    "fikalist.providers.remove(['Francesca', 'Björn'])\n",
+    "# Remove Thedi and Moszi as they will do next week\n",
+    "fikalist.providers.remove(['Thedi', 'Moszi'])\n",
     "\n",
     "# FikaList even handles your errors\n",
     "fikalist.providers.remove('Linda')"
@@ -155,11 +157,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:43:07.913411Z",
-     "start_time": "2019-09-29T18:43:07.909582Z"
+     "end_time": "2020-01-21T12:48:02.623364Z",
+     "start_time": "2020-01-21T12:48:02.620004Z"
     }
    },
    "outputs": [],
@@ -168,7 +170,7 @@
     "#fikalist.constraints.add('Francesca', 'just arrived')\n",
     "\n",
     "# bump up Bengt as he skipped last time!\n",
-    "fikalist.constraints.add('Bengt', 'just arrived')\n",
+    "#fikalist.constraints.add('Bengt', 'just arrived')\n",
     "\n",
     "# Rakhee and Nirmal live together, so they should have the same fika date\n",
     "fikalist.constraints.add(['Rakhee', 'Nirmal'], 'together')"
@@ -187,11 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:43:08.656824Z",
-     "start_time": "2019-09-29T18:43:08.653525Z"
+     "end_time": "2020-01-21T12:48:04.071393Z",
+     "start_time": "2020-01-21T12:48:04.068461Z"
     }
    },
    "outputs": [],
@@ -199,16 +201,16 @@
     "from datetime import date, timedelta\n",
     "\n",
     "# specify the desired start date \n",
-    "start_date = date(2019, 10, 6)"
+    "start_date = date(2020, 1, 29)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:43:09.265803Z",
-     "start_time": "2019-09-29T18:43:09.150497Z"
+     "end_time": "2020-01-21T12:48:11.762458Z",
+     "start_time": "2020-01-21T12:48:11.653730Z"
     }
    },
    "outputs": [
@@ -242,80 +244,94 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>41</td>\n",
-       "      <td>11/10/2019</td>\n",
-       "      <td>Dennis</td>\n",
-       "      <td>Fredrik</td>\n",
+       "      <td>5</td>\n",
+       "      <td>31/01/2020</td>\n",
+       "      <td>Jonas</td>\n",
+       "      <td>Tommy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>42</td>\n",
-       "      <td>18/10/2019</td>\n",
-       "      <td>Vlasta</td>\n",
-       "      <td>Giulia</td>\n",
+       "      <td>6</td>\n",
+       "      <td>07/02/2020</td>\n",
+       "      <td>Bengt</td>\n",
+       "      <td>Sandhya</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>43</td>\n",
-       "      <td>25/10/2019</td>\n",
-       "      <td>Marcus</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14/02/2020</td>\n",
        "      <td>Filip</td>\n",
+       "      <td>Vlasta</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>44</td>\n",
-       "      <td>01/11/2019</td>\n",
-       "      <td>Nirmal</td>\n",
-       "      <td>Rakhee</td>\n",
+       "      <td>8</td>\n",
+       "      <td>21/02/2020</td>\n",
+       "      <td>Olle</td>\n",
+       "      <td>Giulia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>45</td>\n",
-       "      <td>08/11/2019</td>\n",
-       "      <td>Josefin</td>\n",
-       "      <td>Mattias</td>\n",
+       "      <td>9</td>\n",
+       "      <td>28/02/2020</td>\n",
+       "      <td>Rakhee</td>\n",
+       "      <td>Nirmal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>46</td>\n",
-       "      <td>15/11/2019</td>\n",
-       "      <td>Zeynep</td>\n",
-       "      <td>Felix</td>\n",
+       "      <td>10</td>\n",
+       "      <td>06/03/2020</td>\n",
+       "      <td>Dennis</td>\n",
+       "      <td>Josefin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
-       "      <td>47</td>\n",
-       "      <td>22/11/2019</td>\n",
-       "      <td>Navpreet</td>\n",
-       "      <td>Rabia</td>\n",
+       "      <td>11</td>\n",
+       "      <td>13/03/2020</td>\n",
+       "      <td>Francesca</td>\n",
+       "      <td>Mattias</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
-       "      <td>48</td>\n",
-       "      <td>29/11/2019</td>\n",
-       "      <td>Bengt</td>\n",
-       "      <td>Mark</td>\n",
+       "      <td>12</td>\n",
+       "      <td>20/03/2020</td>\n",
+       "      <td>David</td>\n",
+       "      <td>Rabia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
-       "      <td>49</td>\n",
-       "      <td>06/12/2019</td>\n",
-       "      <td>Manojit</td>\n",
-       "      <td>Jonas</td>\n",
+       "      <td>13</td>\n",
+       "      <td>27/03/2020</td>\n",
+       "      <td>Christer</td>\n",
+       "      <td>Navpreet</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
-       "      <td>50</td>\n",
-       "      <td>13/12/2019</td>\n",
-       "      <td>Thedi</td>\n",
-       "      <td>Moszi</td>\n",
+       "      <td>14</td>\n",
+       "      <td>03/04/2020</td>\n",
+       "      <td>Christian</td>\n",
+       "      <td>Fredrik</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>17/01/2020</td>\n",
-       "      <td>Christian</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17/04/2020</td>\n",
+       "      <td>Mark</td>\n",
+       "      <td>Marcus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>17</td>\n",
+       "      <td>24/04/2020</td>\n",
+       "      <td>Felix</td>\n",
        "      <td>Exjobbare</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>19</td>\n",
+       "      <td>08/05/2020</td>\n",
+       "      <td>Manojit</td>\n",
+       "      <td>nan</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -323,17 +339,19 @@
       ],
       "text/plain": [
        "   Week      Friday   Person 1   Person 2\n",
-       "0    41  11/10/2019     Dennis    Fredrik\n",
-       "1    42  18/10/2019     Vlasta     Giulia\n",
-       "2    43  25/10/2019     Marcus      Filip\n",
-       "3    44  01/11/2019     Nirmal     Rakhee\n",
-       "4    45  08/11/2019    Josefin    Mattias\n",
-       "5    46  15/11/2019     Zeynep      Felix\n",
-       "6    47  22/11/2019   Navpreet      Rabia\n",
-       "7    48  29/11/2019      Bengt       Mark\n",
-       "8    49  06/12/2019    Manojit      Jonas\n",
-       "9    50  13/12/2019      Thedi      Moszi\n",
-       "10    3  17/01/2020  Christian  Exjobbare"
+       "0     5  31/01/2020      Jonas      Tommy\n",
+       "1     6  07/02/2020      Bengt    Sandhya\n",
+       "2     7  14/02/2020      Filip     Vlasta\n",
+       "3     8  21/02/2020       Olle     Giulia\n",
+       "4     9  28/02/2020     Rakhee     Nirmal\n",
+       "5    10  06/03/2020     Dennis    Josefin\n",
+       "6    11  13/03/2020  Francesca    Mattias\n",
+       "7    12  20/03/2020      David      Rabia\n",
+       "8    13  27/03/2020   Christer   Navpreet\n",
+       "9    14  03/04/2020  Christian    Fredrik\n",
+       "10   16  17/04/2020       Mark     Marcus\n",
+       "11   17  24/04/2020      Felix  Exjobbare\n",
+       "12   19  08/05/2020    Manojit        nan"
       ]
      },
      "metadata": {},
@@ -364,18 +382,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T18:44:46.337695Z",
-     "start_time": "2019-09-29T18:44:46.331368Z"
+     "end_time": "2020-01-21T13:06:58.345479Z",
+     "start_time": "2020-01-21T13:06:58.338567Z"
     }
    },
    "outputs": [],
    "source": [
-    "output_filename = 'old_fikalists/autumn19.fika'\n",
+    "output_filename = 'old_fikalists/spring20.fika'\n",
     "fikalist.save(output_filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -394,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
